syntax = "proto3";
option java_multiple_files = true;
package com.geektcp.alpha.socket.grpc.proto.file;

message FileData {
  bytes data = 1;
  int32 start_pos = 2;
  int32 len = 3;
  string msg = 4;
  string file_name = 5;
  int32 status = 6;
}

message Response {
  int32 offset = 1;
  string msg = 2;
}

service FileService {
  rpc send (FileData) returns (Response);
  rpc getProgress (FileData) returns (Response);
}
