syntax = "proto3";
option java_multiple_files = true;
package com.geektcp.alpha.socket.grpc.proto.greet;

message Person {
  string first_name = 1;
  string last_name = 2;
}

message Greeting {
  string message = 1;
}

service GreetService {
  rpc sayHello (Person) returns (Greeting);
}
